missing build.gradle changes